syntax = "proto3";

package example; 

option go_package = "example/examplepb";

service Greeter {
    rpc SayHello (HelloRequests) returns (HelloResponse);
}

message HelloRequests {
    string example = 1;
}

message HelloResponse {
    string message = 1;
}